<resources>
    <string name="app_name">PSMSystem</string>
    <string name="auth_failed">Invalid password or email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="recipes_name">Recipes Name</string>
    <string name="serve">Serving</string>
    <string name="calories">Calories</string>
    <string name="title_activity_user_homepage">User_homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_date">Choose Date</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_summary">Summary</string>
    <string name="title_groceries">Groceries</string>
    <string name="title_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="schedule_date">DD/MM/YYYY</string>
    <string name="schedule_day">Sunday</string>

</resources>