<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.psmsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.psmsystem.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.psmsystem.ui.recipe.RecipeFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.psmsystem.ui.groceries.Summary_Groceries"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary__groceries" />

    <fragment
        android:id="@+id/navigation_groceries"
        android:name="com.example.psmsystem.ui.groceries.GroceriesFragment"
        android:label="@string/title_groceries"
        tools:layout="@layout/fragment_groceries" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.psmsystem.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>